--- a/client/app/feedback/feedback.html
+++ b/client/app/feedback/feedback.html
@@ -1,1 +1,39 @@
-<div>This is the feedback view.</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 ma-top-100">
+            <h1>Feedback</h1>
+            <div class="alert alert-success ng-hide" role="alert" ng-show="submitFeedbackSuccess"><strong>Thank You!</strong> Our staff will review your comments as soon as possible.</div>
+            <div class="alert alert-danger ng-hide" role="alert" ng-show="submitFeedbackFail"><strong>Oops!</strong> Something went wrong. Please submit the form again.</div>
+            <p>To provide us with general feedback, bugs and improvements, or suggestions for future releases, please fill out the form below:</p>
+        </div>
+        <div class="col-sm-8 col-sm-offset-2">
+            <form role="form" class="form-horizontal ng-pristine ng-valid ng-valid-email">
+                <div class="form-group"><label class="col-sm-2 control-label" for="inputName">Full Name</label>
+                    <div class="col-sm-10"><input placeholder="Name" id="inputName" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="feedback.inputName"></div>
+                </div>
+                <div class="form-group"><label class="col-sm-2 control-label" for="inputEmail">Email</label>
+                    <div class="col-sm-10"><input placeholder="Email" id="inputEmail" class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-email" ng-model="feedback.inputEmail" type="email"></div>
+                </div>
+                <div class="form-group"><label class="col-sm-2 control-label" for="inputType">Feedback Type</label>
+                    <div class="col-sm-10">
+                        <select id="inputType" name="inputType" class="form-control ng-pristine ng-valid ng-empty ng-touched" style="width:100% !important; margin:0" ng-model="feedback.inputType">
+                                <option value="">Choose feedback type</option>
+                                <option value="None">None</option>
+                                <option value="General Feedback">General Feedback</option>
+                                <option value="Application Bug">Application Bug</option>
+                                <option value="Enhancement Request">Enhancement Request</option>
+                                <option value="Resource Content">Resource Content</option>
+                                <option value="Map Content">Map Content</option>
+                            </select>
+                    </div>
+                </div>
+                <div class="form-group"><label class="col-sm-2 control-label" for="inputComment">Comment</label>
+                    <div class="col-sm-10"><textarea class="form-control ng-pristine ng-untouched ng-valid ng-empty" rows="3" id="inputComment" name="inputComment" ng-model="feedback.inputComment"></textarea></div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10"><button class="btn btn-primary" type="submit" ng-click="submitFeedback()">Submit</button></div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
