--- a/client/_index.html
+++ b/client/_index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
-    <title>Angular Full-Stack Generator</title>
+    <title>Projections 2040 - Forecasts for Population Households and Jobs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,12 +21,10 @@
     <!-- Map Box -->
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css" rel="stylesheet" />
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/grayscale.css" rel="stylesheet">
 
 </head>
 
-<body>
+<body id="page-top">
     <!--[if lt IE 9]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
