--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-2" style="margin-top: 140px;">
+        <div class="col-lg-3 col-md-2 col-sm-0" style="margin-top: 240px;">
             <form class="form-inline" action="/action_page.php">
                 <div class="form-group">
-                    <label class="control-label" for="select">
-                           <span class="ma-bottom-20">Select Geography</span>
+                    <label class="mr-sm-2" for="select">
+                           <span>Select Geography</span>
                            </label>
-                    <select class="select form-control" id="select" name="select" ng-model="dataCtrl.geographyName" ng-change="dataCtrl.updateVariableList()">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName" ng-change="dataCtrl.updateVariableList()">
                             <option value="ssa">
                                 Subregional Study Area
                             </option>
@@ -19,11 +19,11 @@
                            
                            </select>
                 </div>
-                <div class="form-group ma-top-20">
-                    <label class="control-label ma-bottom-20" for="select">
-                          Select County
+                <div class="form-group">
+                    <label class="mr-sm-2" for="select1">
+                            <span>Select County</span>  
                            </label>
-                    <select class="select form-control" id="select1" name="select" ng-model="dataCtrl.countyName">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select1" name="select1" ng-model="dataCtrl.countyName">
                             <option value="Alameda">
                            Alameda
                             </option>
@@ -53,22 +53,24 @@
                                      </option>
                            </select>
                 </div>
-                <div class="form-group ma-top-20">
-                    <label class="control-label " for="select">
-                           Select Variable
+                <div class="form-group">
+                    <label class="mr-sm-2" for="select4">
+                            <span>Select Variable</span>  
                            </label>
-                    <select class="select form-control" id="select4" name="select" ng-model="dataCtrl.variableName" ng-change="dataCtrl.updateTable()" ng-options="variable.variable as variable.variable for variable in dataCtrl.variableList">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select4" name="select4" ng-model="dataCtrl.variableName" ng-change="dataCtrl.updateTable()" ng-options="variable.variable as variable.variable for variable in dataCtrl.variableList">
                     </select>
                 </div>
             </form>
             <!-- <button class="btn btn-default" ng-click="dataCtrl.updateTable()">View Data</button> -->
             <button class="btn btn-default ma-top-20" ng-click="dataCtrl.mapView()">View Map</button>
 
+
         </div>
-        <div class="col-lg-10 ma-top-40">
-            <div class="table-content">
+        <div class="col-lg-9 col-md-10 col-sm-12 ma-top-80">
+            <div class="table-content" style="margin-top: 80px;">
+
                 <h1> {{dataCtrl.dataDescription}}</h1>
-                <table class="table">
+                <table class="table table-striped table-responsive">
                     <thead>
                         <th></th>
                         <th>2005</th>
@@ -83,42 +85,42 @@
                     <tbody>
                         <tr ng-repeat="data in dataCtrl.finalData">
                             <td>{{data.name}}</td>
-                            <td>{{data[2005]}}</td>
-                            <td>{{data[2010]}}</td>
-                            <td>{{data[2015]}}</td>
-                            <td>{{data[2020]}}</td>
-                            <td>{{data[2025]}}</td>
-                            <td>{{data[2030]}}</td>
-                            <td>{{data[2035]}}</td>
-                            <td>{{data[2040]}}</td>
+                            <td class="text-right">{{data[2005]| number:0}}</td>
+                            <td class="text-right">{{data[2010]| number:0}}</td>
+                            <td class="text-right">{{data[2015]| number:0}}</td>
+                            <td class="text-right">{{data[2020]| number:0}}</td>
+                            <td class="text-right">{{data[2025]| number:0}}</td>
+                            <td class="text-right">{{data[2030]| number:0}}</td>
+                            <td class="text-right">{{data[2035]| number:0}}</td>
+                            <td class="text-right">{{data[2040]| number:0}}</td>
                         </tr>
                         <tr>
                             <td>
-                                <h4>{{dataCtrl.countyTotal.name}} County</h4>
+                                <h6>{{dataCtrl.countyTotal.name}} County</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2005]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2005]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2010]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2010]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2015]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2015]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2020]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2020]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2025]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2025]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2030]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2030]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2035]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2035]| number:0}}</h6>
                             </td>
-                            <td>
-                                <h4>{{dataCtrl.countyTotal[2040]}}</h4>
+                            <td class="text-right">
+                                <h6>{{dataCtrl.countyTotal[2040]| number:0}}</h6>
                             </td>
                         </tr>
                     </tbody>
@@ -126,5 +128,6 @@
             </div>
         </div>
     </div>
+
 
 </div>
