--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,70 +1,72 @@
-<!-- <header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
-
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
-        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
-  </div>
-</div> -->
-
 <!-- Intro Header -->
 <header class="masthead">
     <div class="intro-body">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h1 class="brand-heading">Grayscale</h1>
-                    <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                        <br>Created by Start Bootstrap.</p>
-                    <a href="#about" class="btn btn-circle js-scroll-trigger">
-                        <i class="fa fa-angle-double-down animated"></i>
-                    </a>
+                    <h1 class="brand-heading">&nbsp;</h1>
+                    <img src="/assets/images/intro-logos.png" class="img-fluid" alt="Responsive image">
+
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h1 class="brand-heading">&nbsp;</h1>
+
+                    <br />
+                    <p>
+                        <a href="#about" class="btn btn-circle js-scroll-trigger">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </p>
+
+                    <br />
+                </div>
+            </div>
+
         </div>
     </div>
 </header>
 
 <!-- About Section -->
-<section id="about" class="content-section text-center">
+<section id="about" class="content-section text-left">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by
-                    <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of
-                    <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <div class="col-lg-12 mx-auto">
+                <h2>Projections 2040</h2>
+                <p>Projections 2040 is the most recent in the Association of Bay Area Governments’ series of statistical compendia on demographic, economic, and land use changes in coming decades. The current version covers the period between 2010 and 2040.
+                    The projections illustrate how the region will accommodate growth if local jurisdictions adopt a set of policies consistent with the vision of Plan Bay Area. We make reasonable assumptions about the Bay Area’s share of national economic
+                    growth informed by an understanding of the region’s changing demographic characteristics. The distribution of growth within the region among counties, cities and PDAs is built around expected local policies and infrastructure investment
+                    as well as historic economic behavior.</p>
+                <h4><b>Some of the changes expected for the Bay Area include:</b></h4>
+                <p>Between 2010 and 2040 the region is expected to add approximately 1.1 million new jobs.</p>
+                <p>The population is projected to grow by 2.1 million</p>
+                <p>The Professional and Managerial Services employment category is expected to add 380,000 jobs – the most out of any category</p>
             </div>
         </div>
     </div>
 </section>
 
 <!-- Download Section -->
-<section id="download" class="download-section content-section text-center">
+<section id="download" class="download-section content-section text-left">
     <div class="container">
-        <div class="col-lg-8 mx-auto">
-            <h2>Download Grayscale</h2>
-            <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-            <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        <div class="col-lg-12 mx-auto">
+            <h2>Download Data</h2>
+            <p>You can download the projections data for free from our Open Data site. The following datasets are available for downloads:</p>
+            <p> <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Subregional-Study-Areas/bijg-2bez" target="_blank" class="btn btn-default btn-lg">Projections 2040 by Subregional Study Area</a>
+            </p>
+            <p>
+                <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-By-Jurisdiction/nhbf-ixt8" target="_blank" class="btn btn-default btn-lg">Projections 2040 by Jurisdiction Boundary</a>
+            </p>
+            <!-- <p>
+                <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Priority-Development-Are/wbrw-wuir" target="_blank" class="btn btn-default btn-lg">Projections 2040 by Priority Development Areas</a>
+            </p> -->
         </div>
     </div>
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="content-section text-center">
+<!-- <section id="contact" class="content-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -94,4 +96,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
