--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -40,8 +40,8 @@
                     as well as historic economic behavior.</p>
                 <h4><b>Some of the changes expected for the Bay Area include:</b></h4>
                 <p>Between 2010 and 2040 the region is expected to add approximately 1.1 million new jobs.</p>
-                <p>The population is projected to grow by 2.1 million</p>
-                <p>The Professional and Managerial Services employment category is expected to add 380,000 jobs – the most out of any category</p>
+                <p>The population is projected to grow by 2.1 million.</p>
+                <p>The Professional and Managerial Services employment category is expected to add 380,000 jobs – the most out of any category.</p>
             </div>
         </div>
     </div>
