--- a/client/app/feedback/feedback.html
+++ b/client/app/feedback/feedback.html
@@ -31,7 +31,7 @@
                     <div class="col-sm-10"><textarea class="form-control ng-pristine ng-untouched ng-valid ng-empty" rows="3" id="inputComment" name="inputComment" ng-model="feedback.inputComment"></textarea></div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10"><button class="btn btn-primary" type="submit" ng-click="submitFeedback()">Submit</button></div>
+                    <div class="col-sm-offset-2 col-sm-10"><button class="btn btn-data" type="submit" ng-click="submitFeedback()">Submit</button></div>
                 </div>
             </form>
         </div>
