--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,7 +1,3 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="map" style="height:85vh;width:100%;"></div>
-        </div>
-    </div>
+<div class="container-fluid padding-0 margin-0">
+    <div id="map" class="mapView"></div>
 </div>
