--- a/client/_index.html
+++ b/client/_index.html
@@ -22,6 +22,7 @@
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css" rel="stylesheet" />
 
 
+
 </head>
 
 <body id="page-top">
@@ -77,7 +78,8 @@
     <!-- Turf Plugin for Mapbox -->
     <!-- http://turfjs.org/ -->
     <script src="https://api.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js"></script>
-
+    <!-- Tableau JS API -->
+    <!-- <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script> -->
     <!-- Custom scripts for this template -->
     <!-- <script src="assets/js/grayscale.min.js"></script> -->
 </body>
