--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -67,21 +67,23 @@
             <div class="col-lg-12 mx-auto">
 
                 <h3 class="ma-bottom-20">Bay Area Regional Projections</h3>
-                <p>This feature is exploratory. May not be implemented in this fashion.</p>
+
             </div>
         </div>
         <!-- Data Charts will go here... -->
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <!-- Tableau Viz -->
-                <div class='tableauPlaceholder' id='viz1514595635970' style='position: relative'><noscript>
-                    <a href='#'>
-                        <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;De&#47;Demographics_37&#47;ChartView&#47;1_rss.png' style='border: none' />
-                    </a>
-                </noscript>
+                <div class='tableauPlaceholder' id='viz1514750209653' style='position: relative'>
+                    <noscript>
+                        <a href='#'>
+                            <img alt='Total Households ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;De&#47;Demographics_37&#47;ChartView&#47;1_rss.png' style='border: none' />
+                        </a>
+                    </noscript>
                     <object class='tableauViz' style='display:none;'>
                         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-                        <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+                        <param name='embed_code_version' value='3' /> 
+                        <param name='site_root' value='' />
                         <param name='name' value='Demographics_37&#47;ChartView' />
                         <param name='tabs' value='no' />
                         <param name='toolbar' value='yes' />
@@ -95,7 +97,7 @@
                     </object>
                 </div>
                 <script type='text/javascript'>
-                    var divElement = document.getElementById('viz1514595635970');
+                    var divElement = document.getElementById('viz1514750209653');
                     var vizElement = divElement.getElementsByTagName('object')[0];
                     vizElement.style.width = '100%';
                     vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
@@ -112,7 +114,7 @@
 
 
 
-
+                <small>Note: This feature is exploratory. May not be implemented in this fashion.</small>
             </div>
         </div>
 </section>
