Fixed Footer for map page

--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,3 +1,7 @@
-<div class="container-fluid padding-0 margin-0">
-    <div id="map" class="mapView"></div>
+<div class="container-fluid mh">
+    <div class="row">
+        <div class="content-section">
+            <div id="map" class="mapView"></div>
+        </div>
+    </div>
 </div>
