--- a/client/_index.html
+++ b/client/_index.html
@@ -79,7 +79,7 @@
     <!-- http://turfjs.org/ -->
     <script src="https://api.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js"></script>
     <!-- Tableau JS API -->
-    <!-- <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script> -->
+    <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <!-- Custom scripts for this template -->
     <!-- <script src="assets/js/grayscale.min.js"></script> -->
 </body>
