--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -65,7 +65,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 mx-auto">
-
                 <h3 class="ma-bottom-20">Bay Area Regional Projections</h3>
 
             </div>
@@ -73,8 +72,25 @@
         <!-- Data Charts will go here... -->
         <div class="row">
             <div class="col-lg-12 mx-auto">
+                <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="$ctrl.updateChartParameter" ng-change="$ctrl.filterViz()">
+                        <option value="">
+                        </option>   
+                        <option value="Household Population">
+                                Household Population
+                        </option>
+                        <option value="Total Households">
+                            Total Households
+                        </option>
+                        <option value="Group Quarters Population">
+                                Group Quarters Population
+                        </option>
+                        <option value="Employed Residents">
+                                Employed Residents
+                        </option>
+                 </select>
+                <div id="vizContainer" style="width:100%; height:auto;"></div>
                 <!-- Tableau Viz -->
-                <div class='tableauPlaceholder' id='viz1514750209653' style='position: relative'>
+                <!-- <div class='tableauPlaceholder' id='viz1514750209653' style='position: relative'>
                     <noscript>
                         <a href='#'>
                             <img alt='Total Households ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;De&#47;Demographics_37&#47;ChartView&#47;1_rss.png' style='border: none' />
@@ -104,7 +120,7 @@
                     var scriptElement = document.createElement('script');
                     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
                     vizElement.parentNode.insertBefore(scriptElement, vizElement);
-                </script>
+                </script> -->
                 <!-- Plot.ly Viz -->
                 <!-- &show_link=false will hide Edit Link Button add after sharekey-plotly link -->
                 <!-- <div>
@@ -117,6 +133,7 @@
                 <small>Note: This feature is exploratory. May not be implemented in this fashion.</small>
             </div>
         </div>
+    </div>
 </section>
 
 <!-- Download Section -->
