--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -71,7 +71,7 @@
 
                 <h4 class="mb-4 text-caps"> {{dataCtrl.variableName}}</h4>
                 <table class="table table-striped table-responsive">
-                    <thead>
+                    <thead class="text-right">
                         <th></th>
                         <th>2005</th>
                         <th>2010</th>
