--- a/client/_index.html
+++ b/client/_index.html
@@ -67,6 +67,8 @@
     <script src="assets/vendor/lodash/lodash.js"></script>
 
     <!-- Map Box -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js'></script>
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css' type='text/css' />
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js"></script>
 
     <!-- Add Geojson Layers -->
