--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-lg-12 mx-auto">
 
-                <h3 class="ma-bottom-20">Forecast of Jobs, Housing and Population</h3>
+                <h4 class="ma-bottom-20">Forecast of Population, Households and Jobs</h4>
 
             </div>
         </div>
@@ -94,7 +94,7 @@
         <!-- Data Table will go here... -->
         <div class="row mt-3">
             <div class="col-lg-12 mx-auto">
-                <h3 class="ma-bottom-20">Regional Projections</h3>
+                <h4 class="ma-bottom-20">Regional Projections</h4>
                 <div id="dataContainer" style="width:100%; height:auto;"></div>
             </div>
         </div>
