--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -88,7 +88,7 @@
             <div class="col-lg-12 mx-auto">
                 <!-- Tableau Viz -->
                 <div id="vizContainer" style="width:100%; height:auto;"></div>
-                <small>Note: This feature is exploratory. May not be implemented in this fashion.</small>
+                <small>Developer Note: This feature is exploratory. May not be implemented in this fashion.</small>
             </div>
         </div>
         <!-- Data Table will go here... -->
