--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -6,7 +6,7 @@
                     <label class="mr-sm-2" for="select">
                            <span>Select Geography</span>
                            </label>
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName" ng-change="dataCtrl.updateTable()">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName">
                             <option value="ssa">
                                 Subregional Study Area
                             </option>
@@ -20,10 +20,10 @@
                            </select>
                 </div>
                 <div class="form-group">
-                    <label class="mr-sm-2" for="select1">
+                    <label class="mr-sm-2 mt-2" for="select1">
                             <span>Select County</span>  
                            </label>
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select1" name="select1" ng-model="dataCtrl.countyName" ng-change="dataCtrl.updateTable()">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select1" name="select1" ng-model="dataCtrl.countyName">
                             <option value="Alameda">
                            Alameda
                             </option>
@@ -54,14 +54,45 @@
                            </select>
                 </div>
                 <div class="form-group">
-                    <label class="mr-sm-2" for="select4">
+                    <label class="mr-sm-2 mt-2" for="select1">
+                                <span>Select Data Group</span>  
+                               </label>
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select5" name="select5" ng-model="dataCtrl.dataGroup" ng-change="dataCtrl.updateVariableList()">
+                            <option value="Total Jobs">
+                            Jobs
+                            </option>
+                            <option value="Households">
+                            Households
+                            </option>
+                            <option value="Housing Units">
+                            Housing Units
+                            </option>
+                            <option value="Total Population">
+                            Population
+                            </option>
+                            <option value="Employed Residents">
+                            Employed Residents
+                            </option>
+                            <option value="Total Population by Age">
+                            Population by Age
+                            </option>
+                            <option value="Total Population by Gender and Age">
+                            Population by Gender and Age
+                            </option>
+                            <option value="Household Income">
+                            Income
+                            </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="mr-sm-2 mt-2" for="select4">
                             <span>Select Variable</span>  
                     </label>
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select4" name="select4" ng-model="dataCtrl.variableName" ng-change="dataCtrl.updateTable()" ng-options="variable.variable as variable.variable for variable in dataCtrl.variableList">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select4" name="select4" ng-model="dataCtrl.variableName" ng-options="variable.variable as variable.variable for variable in dataCtrl.variableStore">
                     </select>
                 </div>
             </form>
-            <!-- <button class="btn btn-default" ng-click="dataCtrl.updateTable()">View Data</button> -->
+            <button class="btn btn-data ma-top-20 ma-bottom-40" ng-click="dataCtrl.updateTable()">View Data</button>
             <!-- <button class="btn btn-data ma-top-20 ma-bottom-40" ng-click="dataCtrl.mapView()">View Map</button> -->
 
 
@@ -69,7 +100,7 @@
         <div class="col-lg-9 col-md-10 col-sm-12 ma-top-80 mb-5">
             <div class="table-content" style="margin-top: 80px;">
 
-                <h4 class="mb-4 text-caps"> {{dataCtrl.variableName}}</h4>
+                <h4 class="mb-4 text-caps"> {{dataCtrl.currentName}}</h4>
                 <table class="table table-striped table-responsive">
                     <thead class="text-right">
                         <th></th>
