[Feedback] Updates to lambda function

--- a/client/app/feedback/feedback.html
+++ b/client/app/feedback/feedback.html
@@ -9,14 +9,14 @@
         <div class="col-sm-8 col-sm-offset-2">
             <form role="form" class="form-horizontal ng-pristine ng-valid ng-valid-email">
                 <div class="form-group"><label class="col-sm-2 control-label" for="inputName">Full Name</label>
-                    <div class="col-sm-10"><input placeholder="Name" id="inputName" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="feedback.inputName"></div>
+                    <div class="col-sm-10"><input placeholder="Name" id="inputName" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="feedbackCtrl.feedback.inputName"></div>
                 </div>
                 <div class="form-group"><label class="col-sm-2 control-label" for="inputEmail">Email</label>
-                    <div class="col-sm-10"><input placeholder="Email" id="inputEmail" class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-email" ng-model="feedback.inputEmail" type="email"></div>
+                    <div class="col-sm-10"><input placeholder="Email" id="inputEmail" class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-email" ng-model="feedbackCtrl.feedback.inputEmail" type="email"></div>
                 </div>
                 <div class="form-group"><label class="col-sm-2 control-label" for="inputType">Feedback Type</label>
                     <div class="col-sm-10">
-                        <select id="inputType" name="inputType" class="form-control ng-pristine ng-valid ng-empty ng-touched" style="width:100% !important; margin:0" ng-model="feedback.inputType">
+                        <select id="inputType" name="inputType" class="form-control ng-pristine ng-valid ng-empty ng-touched" style="width:100% !important; margin:0" ng-model="feedbackCtrl.feedback.inputType">
                                 <option value="">Choose feedback type</option>
                                 <option value="None">None</option>
                                 <option value="General Feedback">General Feedback</option>
@@ -28,10 +28,10 @@
                     </div>
                 </div>
                 <div class="form-group"><label class="col-sm-2 control-label" for="inputComment">Comment</label>
-                    <div class="col-sm-10"><textarea class="form-control ng-pristine ng-untouched ng-valid ng-empty" rows="3" id="inputComment" name="inputComment" ng-model="feedback.inputComment"></textarea></div>
+                    <div class="col-sm-10"><textarea class="form-control ng-pristine ng-untouched ng-valid ng-empty" rows="3" id="inputComment" name="inputComment" ng-model="feedbackCtrl.feedback.inputComment"></textarea></div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10 mt-4 mb-4 text-right"><button class="btn btn-data" type="submit" ng-click="submitFeedback()">Submit</button></div>
+                    <div class="col-sm-offset-2 col-sm-10 mt-4 mb-4 text-right"><button class="btn btn-data" type="submit" ng-click="feedbackCtrl.submitFeedback()">Submit</button></div>
                 </div>
             </form>
         </div>
