--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -7,9 +7,9 @@
                            <span>Select Geography</span>
                            </label>
                     <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName">
-                            <option value="ssa">
-                                Subregional Study Area
-                            </option>
+                                <!-- <option value="ssa">
+                                    Subregional Study Area
+                                </option> -->
                             <option value="jurisdiction">
                                 Jurisdiction
                             </option>
@@ -104,7 +104,7 @@
                 <table class="table table-striped table-responsive">
                     <thead class="text-right">
                         <th></th>
-                        <th>2005</th>
+                        <!-- <th>2005</th> -->
                         <th>2010</th>
                         <th>2015</th>
                         <th>2020</th>
@@ -116,7 +116,7 @@
                     <tbody>
                         <tr ng-repeat="data in dataCtrl.finalData | orderBy:'sortOrder'">
                             <td>{{data.name}}</td>
-                            <td class="text-right">{{data[2005]| number:0}}</td>
+                            <!-- <td class="text-right">{{data[2005]| number:0}}</td> -->
                             <td class="text-right">{{data[2010]| number:0}}</td>
                             <td class="text-right">{{data[2015]| number:0}}</td>
                             <td class="text-right">{{data[2020]| number:0}}</td>
@@ -129,9 +129,9 @@
                             <td>
                                 <h6>{{dataCtrl.countyTotal.name}} County</h6>
                             </td>
-                            <td class="text-right">
+                            <!-- <td class="text-right">
                                 <h6>{{dataCtrl.countyTotal[2005]| number:0}}</h6>
-                            </td>
+                            </td> -->
                             <td class="text-right">
                                 <h6>{{dataCtrl.countyTotal[2010]| number:0}}</h6>
                             </td>
