data and viz updates
Fixed the Data to poiint to the new data source api on Socrata, also fixed the Vizzes and the filters for ecH

--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -58,7 +58,7 @@
                                 <span>Select Data Group</span>  
                                </label>
                     <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select5" name="select5" ng-model="dataCtrl.dataGroup" ng-change="dataCtrl.updateVariableList()">
-                            <option value="Total Jobs">
+                            <option value="Jobs">
                             Jobs
                             </option>
                             <option value="Households">
@@ -67,21 +67,21 @@
                             <option value="Housing Units">
                             Housing Units
                             </option>
-                            <option value="Total Population">
+                            <option value="Population">
                             Population
                             </option>
                             <option value="Employed Residents">
                             Employed Residents
                             </option>
-                            <option value="Total Population by Age">
+                            <option value="Population by Age">
                             Population by Age
                             </option>
-                            <option value="Total Population by Gender and Age">
+                            <option value="Population by Gender and Age">
                             Population by Gender and Age
                             </option>
-                            <option value="Household Income">
+                            <!-- <option value="Household Income">
                             Income
-                            </option>
+                            </option> -->
                     </select>
                 </div>
                 <div class="form-group">
