--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -74,11 +74,11 @@
 
             <div class="col-lg-12 mx-auto">
                 <div class="button-wrapper btn-fill-space mb-4 mt-3">
-                    <button class="btn btn-app" value="Total Population" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Population</span></button>
-                    <button class="btn btn-app" value="Total Households" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Households</span></button>
-                    <button class="btn btn-app" value="Total Jobs" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Jobs</span></button>
+                    <button class="btn btn-app" value="Population" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Population</span></button>
+                    <button class="btn btn-app" value="Households" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Households</span></button>
+                    <button class="btn btn-app" value="Jobs" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Jobs</span></button>
                     <button class="btn btn-app" value="Employed Residents" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Employed Residents</span></button>
-                    <button class="btn btn-app" value="Total Housing Units" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Housing Units</span></button>
+                    <button class="btn btn-app" value="Housing Units" ng-click="$ctrl.filterViz($event)"><span class="btnSelect">Housing Units</span></button>
                 </div>
             </div>
         </div>
@@ -124,10 +124,10 @@
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <p>You can download the projections data for free from our Open Data site. The following datasets are available for downloads:</p>
-                <p> <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Subregional-Study-Areas/bijg-2bez" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Subregional Study Area</a>
-                </p>
+                <!-- <p> <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Subregional-Study-Areas/bijg-2bez" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Subregional Study Area</a>
+                </p> -->
                 <p>
-                    <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-By-Jurisdiction/nhbf-ixt8" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Jurisdiction Boundary</a>
+                    <a href="https://mtc.data.socrata.com/api/views/grqz-amra/files/bf2d7a33-b68e-473d-800f-956d08207b77?download=true&filename=formated_tables_juris.xlsx" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Jurisdiction</a>
                 </p>
                 <!-- <p>
                                 <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Priority-Development-Are/wbrw-wuir" target="_blank" class="btn btn-default btn-lg">Projections 2040 by Priority Development Areas</a>
