[Data] Updates to filters

--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -2,23 +2,23 @@
     <div class="row">
         <div class="col-lg-3 col-md-2 col-sm-0 mb-5" style="margin-top: 240px;">
             <form class="form-inline" action="/action_page.php">
-                 <div class="form-group">
+                <!-- <div class="form-group">
                     <label class="mr-sm-2" for="select">
                            <span>Select Geography</span>
                            </label>
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName">
-                               <!-- <option value="ssa">
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="select" name="select" ng-model="dataCtrl.geographyName"> -->
+                <!-- <option value="ssa">
                                     Subregional Study Area
                                 </option> -->
-                            <option value="jurisdiction">
+                <!-- <option value="jurisdiction">
                                 Jurisdiction
-                            </option>
-                            <!--<option value="pda">
+                            </option> -->
+                <!--<option value="pda">
                               Priority Development Area
                             </option> -->
-                           
+                <!--                            
                            </select>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label class="mr-sm-2 mt-2" for="select1">
                             <span>Select County</span>  
