--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -125,13 +125,13 @@
                             <td class="text-right">{{data[2035]| number:0}}</td>
                             <td class="text-right">{{data[2040]| number:0}}</td>
                         </tr>
-                        <tr>
+                        <!-- <tr>
                             <td>
                                 <h6>{{dataCtrl.countyTotal.name}} County</h6>
                             </td>
-                            <!-- <td class="text-right">
+                            <td class="text-right">
                                 <h6>{{dataCtrl.countyTotal[2005]| number:0}}</h6>
-                            </td> -->
+                            </td> 
                             <td class="text-right">
                                 <h6>{{dataCtrl.countyTotal[2010]| number:0}}</h6>
                             </td>
@@ -153,7 +153,7 @@
                             <td class="text-right">
                                 <h6>{{dataCtrl.countyTotal[2040]| number:0}}</h6>
                             </td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
