--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -100,14 +100,14 @@
                     <table class="table table-striped">
                         <thead>
                             <tr text-align="right">
-                                <td rowspan="1" width="230">
+                                <td rowspan="1">
                                     <p><strong>&nbsp;</strong></p>
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
-                                <td colspan="2" width="173">
+                                <td colspan="2">
                                     <p><strong>Public Data Estimates</strong></p>
                                 </td>
-                                <td colspan="7" width="605">
+                                <td colspan="7">
                                     <p><strong>Plan Bay Area Model Estimates</strong></p>
                                 </td>
                             </tr>
@@ -144,7 +144,7 @@
                                     </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Population</strong></p>
                                 </td>
                                 <td>
@@ -176,7 +176,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Household Population</strong></p>
                                 </td>
                                 <td>
@@ -208,7 +208,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Households</strong></p>
                                 </td>
                                 <td>
@@ -240,7 +240,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Persons per Household</strong></p>
                                 </td>
                                 <td>
@@ -272,7 +272,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Employed Residents</strong></p>
                                 </td>
                                 <td>
@@ -304,7 +304,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Agriculture &amp; Natural Resources</strong></p>
                                 </td>
                                 <td>
@@ -336,7 +336,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Construction</strong></p>
                                 </td>
                                 <td>
@@ -368,7 +368,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Manufacturing &amp; Wholesale</strong></p>
                                 </td>
                                 <td>
@@ -400,7 +400,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Retail</strong></p>
                                 </td>
                                 <td>
@@ -432,7 +432,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Transportation &amp; Utilities</strong></p>
                                 </td>
                                 <td>
@@ -464,7 +464,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Information</strong></p>
                                 </td>
                                 <td>
@@ -496,7 +496,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Financial &amp; Leasing</strong></p>
                                 </td>
                                 <td>
@@ -528,7 +528,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Professional &amp; Managerial Services</strong></p>
                                 </td>
                                 <td>
@@ -560,7 +560,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Health &amp; Educational Services</strong></p>
                                 </td>
                                 <td>
@@ -592,7 +592,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Arts, Recreation &amp; Other Services</strong></p>
                                 </td>
                                 <td>
@@ -624,7 +624,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Government</strong></p>
                                 </td>
                                 <td>
@@ -656,7 +656,7 @@
                                 </td>
                             </tr>
                             <tr text-align="right">
-                                <td width="230">
+                                <td>
                                     <p><strong>Total Jobs</strong></p>
                                 </td>
                                 <td>
